Creating a simple framework for a mobile view port with bootstrap initialised

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" >
     <title>GrandView Hotel</title>
 </head>
 <body>
-    <h1>The GrandView Hotel</h1>
-    <p>This exciting hotel and restrant is now taking online booking</p>
-
-    <div></div>
-    <div></div>
-    <div></div>
+    <h1 class="text-center">The GrandView Hotel</h1>
+    <p class="text-center">This modenised hotel and restrant is now taking online booking</p>
+    
+    <div class="container">Booking a table
+        <p>Our new refurbished restrant is now able to take online bookings.
+            We have a wide virity of foods ranging from traditional to the new 
+            and modern plant based superfoods.</p>
+            <p><a class="btn btn-sm">See Menu</a></p> 
+        <button class="bnt">Make a booking</button>
+    </div>
+    <div class="container">Cancelle a Booking</div>
+    <div class="container">Reviews</div>
 </body>
-</html>
+</html>with an exciting, enjoyable and gourmet menu. Including plant-based .
