--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <p>Our new refurbished restrant is now able to take online bookings.
             We have a wide virity of foods ranging from traditional to the new 
             and modern plant based superfoods.</p>
-            <p><a class="btn btn-sm">See Menu</a></p> 
+            <p><a class="btn btn-sm btn-light">See Menu</a></p> 
         <button class="bnt">Make a booking</button>
     </div>
+    
     <div class="container">Cancelle a Booking</div>
     <div class="container">Reviews</div>
 </body>
